[package]
  name        = "brotli-rs"
  version     = "0.1.0"
  edition     = "2021"
  authors     = ["Nicholas Berlette <nick@berlette.com>"]
  license     = "MIT OR Apache-2.0"
  description = "Lightweight brotli-decompressor WebAssembly bindings, plus a TypeScript wrapper API compatible with Deno, Node, Bun, and the browser."
  publish     = false
  repository  = "https://github.com/nberlette/brotli"

[lib]
  name       = "brotli"
  crate-type = ["cdylib"]

[dependencies]
  wasm-bindgen        = { version = "=0.2.100", features = ["gg-alloc"] }
  brotli-decompressor = { version = "=4.0.2" }

[profile.dev]
  debug-assertions = true
  debug            = true
  lto              = true
  opt-level        = 0
  overflow-checks  = true
  panic            = "unwind"
  strip            = "none"

[profile.release]
  codegen-units    = 1
  debug-assertions = false
  debug            = false
  incremental      = true
  lto              = true
  opt-level        = "z"
  overflow-checks  = false
  panic            = "abort"
  strip            = "symbols"
