[package]
  name        = "brotli-rs"
  version     = "0.1.0"
  edition     = "2021"
  authors     = ["Nicholas Berlette <nick@berlette.com>"]
  license     = "MIT OR Apache-2.0"
  description = "Lightweight brotli-decompressor WebAssembly bindings, plus a TypeScript wrapper API compatible with Deno, Node, Bun, and the browser."
  publish     = false
  repository  = "https://github.com/nberlette/brotli"

[lib]
  name       = "brotli"
  crate-type = ["cdylib"]

[dependencies]
  wasm-bindgen        = { version = "=0.2.100" }
  brotli-decompressor = { version = "=4.0.2" }

[profile.release]
  lto       = true
  opt-level = "s"
